# authora-python

./: .gitignore  README.md  pyproject.toml  test_integration.py
.github/workflows/: publish.yml
authora/: __init__.py  _http.py  agent.py  crypto.py  errors.py  permissions.py  types.py
authora/resources/: __init__.py  agent_groups.py  agents.py  alerts.py  api_keys.py  approvals.py  audit.py  credits.py  delegations.py  mcp.py  notifications.py  organizations.py  permissions.py  policies.py  roles.py  user_delegations.py  webhooks.py  workspaces.py
examples/: quickstart.py
